# msnmsn

./: .gitignore  README.md
code/: README.md  pyproject.toml  requirements.txt
code/notebooks/: README.md
code/scripts/: 00_smoke.ps1  01_run_primary_k0.ps1  02_evaluate_primary_k0.ps1  03_aggregate_decision.ps1  04_run_confirmation.ps1  05_run_full_main.ps1  06_run_full_ablations.ps1  07_evaluate_full.ps1  08_finalize_full.ps1  09_run_full_confirmation.ps1  10_evaluate_confirmation.ps1  check_evaluator_parity.py  fetch_vittrace_model.py  ihp_make_figures.py  ihp_score_cache.py  ihp_structure_audit.py  monitor_full.ps1  monitor_k0.ps1
code/tests/: test_aggregate_decision.py  test_artifact_contract.py  test_benchmark_aggregate.py  test_benchmark_evaluator.py  test_benchmark_manifest.py  test_benchmark_report.py  test_claim_gate.py  test_confirmation_aggregate.py  test_confirmation_guard.py  test_experiment_coverage.py  test_fast_vus.py  test_ihp.py  test_label_isolation.py  test_objectives.py  test_replay.py  test_run_benchmark_series.py  test_scoring_parity.py  test_trainer.py  test_vendor.py  test_vittrace_paper_matched_delivery.py  test_vittrace_release_model.py  test_vittrace_v3_cache_registry.py  test_vittrace_v3_cache_runner.py  test_vittrace_v3_combined_evaluator.py  test_vittrace_v3_core.py  test_vittrace_v3_core_float32_parity.py  test_vittrace_v3_core_matching.py  test_vittrace_v3_core_nctp_parity.py  test_vittrace_v3_core_temporal.py  test_vittrace_v3_delivery_glue.py  test_vittrace_v3_dynamic_cache.py  test_vittrace_v3_dynamic_scorer.py  (+14 more)
docs/: dev_log.md  (+10 more)
(+201 files in other folders)
