[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "measure-vit4ts"
version = "0.1.0"
description = "Index-consistent harmonic projection for frozen ViT4TS"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
markers = [
  "cuda: requires a CUDA device and the frozen CLIP checkpoint",
]
